fix height of give screen on mobile

--- a/server/projects/webclient/css/kikbak.css
+++ b/server/projects/webclient/css/kikbak.css
@@ -1683,7 +1683,7 @@ to {
         margin-top:10px;
     }
    .image-add {
-        height: 292px;
+        height: 255px;
     }
 }
 
